k8s/ingress/tracker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-tracker-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-api-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: tracker.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: personal-tracker-app
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-tracker-frontend
                port:
                  number: 80
